v0.8.20 - small improvements related to the leaderboard functionality;